changes in user and group workflow
