# src/app/core/api/functions.ts
@@ -5,10 +5,24 @@ export type { Login$Params as Login$Params } from './fn/auth/login';
 export { login as login } from './fn/auth/login';
 export type { Register$Params as Register$Params } from './fn/auth/register';
 export { register as register } from './fn/auth/register';
+export type { ListUsers$Params as ListUsers$Params } from './fn/users/list-users';
+export { listUsers as listUsers } from './fn/users/list-users';
+export type { ApproveUser$Params as ApproveUser$Params } from './fn/users/approve-user';
+export { approveUser as approveUser } from './fn/users/approve-user';
 export type { GetMe$Params as GetMe$Params } from './fn/users/get-me';
 export { getMe as getMe } from './fn/users/get-me';
 export type { UpdateMe$Params as UpdateMe$Params } from './fn/users/update-me';
 export { updateMe as updateMe } from './fn/users/update-me';
+export type { GetMyMemberships$Params as GetMyMemberships$Params } from './fn/memberships/get-my-memberships';
+export { getMyMemberships as getMyMemberships } from './fn/memberships/get-my-memberships';
+export type { ListMembers$Params as ListMembers$Params } from './fn/memberships/list-members';
+export { listMembers as listMembers } from './fn/memberships/list-members';
+export type { RemoveMember$Params as RemoveMember$Params } from './fn/memberships/remove-member';
+export { removeMember as removeMember } from './fn/memberships/remove-member';
+export type { ApproveMember$Params as ApproveMember$Params } from './fn/memberships/approve-member';
+export { approveMember as approveMember } from './fn/memberships/approve-member';
+export type { JoinGroup$Params as JoinGroup$Params } from './fn/memberships/join-group';
+export { joinGroup as joinGroup } from './fn/memberships/join-group';
 export type { ListCompetitions$Params as ListCompetitions$Params } from './fn/competitions/list-competitions';
 export { listCompetitions as listCompetitions } from './fn/competitions/list-competitions';
 export type { CreateCompetition$Params as CreateCompetition$Params } from './fn/competitions/create-competition';
@@ -31,16 +45,6 @@ export type { DeleteGroup$Params as DeleteGroup$Params } from './fn/groups/delet
 export { deleteGroup as deleteGroup } from './fn/groups/delete-group';
 export type { UpdateGroup$Params as UpdateGroup$Params } from './fn/groups/update-group';
 export { updateGroup as updateGroup } from './fn/groups/update-group';
-export type { ListMembers$Params as ListMembers$Params } from './fn/memberships/list-members';
-export { listMembers as listMembers } from './fn/memberships/list-members';
-export type { RemoveMember$Params as RemoveMember$Params } from './fn/memberships/remove-member';
-export { removeMember as removeMember } from './fn/memberships/remove-member';
-export type { ApproveMember$Params as ApproveMember$Params } from './fn/memberships/approve-member';
-export { approveMember as approveMember } from './fn/memberships/approve-member';
-export type { CreateInvitation$Params as CreateInvitation$Params } from './fn/invitations/create-invitation';
-export { createInvitation as createInvitation } from './fn/invitations/create-invitation';
-export type { AcceptInvitation$Params as AcceptInvitation$Params } from './fn/invitations/accept-invitation';
-export { acceptInvitation as acceptInvitation } from './fn/invitations/accept-invitation';
 export type { ListTeams$Params as ListTeams$Params } from './fn/teams/list-teams';
 export { listTeams as listTeams } from './fn/teams/list-teams';
 export type { CreateTeam$Params as CreateTeam$Params } from './fn/teams/create-team';
