# src/app/core/api/models.ts
@@ -5,7 +5,6 @@ export type { Competition } from './models/competition';
 export type { CompetitionStatus } from './models/competition-status';
 export type { CreateCompetitionRequest } from './models/create-competition-request';
 export type { CreateGroupRequest } from './models/create-group-request';
-export type { CreateInvitationRequest } from './models/create-invitation-request';
 export type { CreateMatchdayRequest } from './models/create-matchday-request';
 export type { CreateMatchRequest } from './models/create-match-request';
 export type { CreateTeamRequest } from './models/create-team-request';
@@ -13,7 +12,6 @@ export type { GlobalRole } from './models/global-role';
 export type { Group } from './models/group';
 export type { GroupMembership } from './models/group-membership';
 export type { GroupRole } from './models/group-role';
-export type { Invitation } from './models/invitation';
 export type { LoginRequest } from './models/login-request';
 export type { LoginResponse } from './models/login-response';
 export type { Match } from './models/match';
