# src/app/core/api/models/create-invitation-request.ts
@@ -1,6 +1,0 @@
-/* eslint-disable */
-/* Code generated by ng-openapi-gen DO NOT EDIT. */
-
-export interface CreateInvitationRequest {
-  email: string;
-}
