# src/app/core/api/models/invitation.ts
@@ -1,11 +1,0 @@
-/* eslint-disable */
-/* Code generated by ng-openapi-gen DO NOT EDIT. */
-
-export interface Invitation {
-  acceptedAt?: string;
-  email: string;
-  expiresAt: string;
-  groupId: number;
-  id: number;
-  token: string;
-}
